# cookiebot

./: .gitignore  .travis.yml  Cargo.toml  README.md  appveyor.yml  cookiebot.ron.example
.github/workflows/: clippy.yml  main.yml
ci/: before_deploy.ps1  before_deploy.sh
src/: bot.rs  config.rs  lib.rs  main.rs  secrettoken.rs  timestamp.rs  toggle.rs  twitch.rs
src/leavesbot/: bot.rs  config.rs  mod.rs  parser.rs  patterns.rs
src/okayegbot/: bot.rs  mod.rs  parser.rs  patterns.rs
src/thepositivebot/: bot.rs  claimcookie.rs  constants.rs  error.rs  mod.rs  patterns.rs  rank.rs
