[package]
name = "cookiebot"
version = "0.4.2"
authors = ["Chronophylos <nikolai@chronophylos.com>"]
edition = "2018"
repository = "Chronphylos/cookiebot"

[dependencies]
lazy_static = "1.4"
regex = "1.4"
ron = "0.6"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
clap = "2.33"
thiserror = "1.0"
metrics = "0.14.2"
metrics-exporter-prometheus = "0.3.0"
tracing = "0.1.24"
tracing-subscriber = "0.2.1"
tokio = { version = "1.2.0", features = ["full"] }
twitch-irc = "2.2.0"
async-trait = "0.1.48"
secrecy = { version = "0.7.0", features = ["serde"] }
zeroize = { version = "1.2.0", features = ["zeroize_derive"] }
